--- a/build.xml
+++ b/build.xml
@@ -33,6 +33,7 @@
         <mkdir dir="${build.path}"/>
         <mkdir dir="${report.path}"/>
         <mkdir dir="${dist.path}"/>
+		<mkdir dir="${lib.path}"/>
     </target>
     
     <!-- =================================================================== -->
@@ -42,6 +43,7 @@
         <delete dir="${build.path}"/>
         <delete dir="${report.path}"/>
         <delete dir="${dist.path}"/>
+		<delete dir="${lib.path}"/>
     </target>
 
     <!-- =================================================================== -->
